2011-09-05  Vincent Untz  <vuntz@opensuse.org>

	* inc/encrypt.hpp:
	* src/encrypt.cpp: fix build failure with gnutls 3.0

2011-04-14  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 1.3.13 and document the changes

2011-04-14  Philipp Kern  <phil@0x539.de>

	* po/*.po: refreshed from Launchpad

2009-12-23  Philipp Kern  <phil@0x539.de>

	* configure.ac: add AC_CONFIG_MACRO_DIR for libtoolize

2009-12-23  Philipp Kern  <phil@0x539.de>

	* NEWS:
	* po/LINGUAS:
	* po/en_GB.po:
	* po/ko.po: new translations from Launchpad: Korean and English
	(Great Britain)

2009-12-23  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 1.3.12 and document the changes

2009-12-21  Armin Burgmeier  <armin@arbur.net>

	* src/connection.cpp (on_sock_event): Allow non-blocking sockets by
	not closing the connection on EAGAIN. We did that for Windows already,
	since Windows requires sockets to be non-blocking when using
	WSAEventSelect.

2009-12-07  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 1.3.11 and document the changes

2009-10-20  Armin Burgmeier  <armin@0x539.de>

	* src/connection.cpp (do_handshake): After TLS handshake, make also
	sure to call send() as a re-enabling function if we have data to send,
	on Windows. This can prevent a lockup after the TLS negotiation.

2009-10-12  Armin Burgmeier  <armin@0x539.de>

	* po/uk.po: Added Ukrainian translation by Yuri Chornoivan. Bug #479.

	* po/LINGUAS: Added uk.

2009-08-24  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 1.3.10 and document the changes

2009-08-24  Philipp Kern  <phil@0x539.de>

	* po/{he,nb,pt_BR,ru,sk,zh_CN}.po: Import Hebrew, Norwegian Bokmal,
	  Brazilian Portuguese, Russian, Slovak and Simplified Chinese
	  from Ubuntu Jaunty's translation branch.

2009-08-24  Philipp Kern  <phil@0x539.de>

        * po/{es,fr,it,pt}.po: Update existing transitions from Ubuntu
          Jaunty's translation branch.
